Fix function table sorting

* fix ordering of trig functions (longest names first), so that
  "cos" does not shadow "cosec" etc. functions
* only sort function names for display, otherwise breaks highlighter

BUG: 283864
BUG: 228752